# iris-mind

./: .AGENT.md  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  config.yaml  main.py  opencode.json  pyproject.toml  pyrightconfig.json  skills-lock.json  step2_verify.py  step3_verify.py  step4_verify.py  step6_verify.py  step7_verify.py
.agent/: context.md  project.md  rules.md  tasks.md
.agents/: README.md  context.md  project.md  tasks.md
.agents/skills/capability-pattern/: SKILL.md
.agents/skills/doc-sync/: SKILL.md
.devcontainer/: Dockerfile  devcontainer.json
.github/ISSUE_TEMPLATE/: bug.yml
.iris/config/: iris_profile.md  personality_default.md  system_prompt.md  tier1_prompt.md  tier2_prompt.md
.iris/data/: iris_profile.md
.opencode/commands/: refactor.md
.opencode/plans/: refactoring_plan.md
.zed/: settings.json  tasks.json
adapters/: __init__.py
adapters/cli/: __init__.py  input_main.py  output_main.py  renderer.py  server.py
capabilities/: __init__.py  registry.py
capabilities/code_exec/: server.py
capabilities/file_ops/: server.py
capabilities/self_mod/: server.py
core/: __init__.py  cli.py  commands.py  config.py  constants.py  context.py  conversation.py  executor.py  llm_bridge.py  personality.py  planner.py  reflexion.py  tool_executor.py
debug_tools/: cli.py
debug_tools/cli/: input_main.py  output_main.py  renderer.py  server.py
debug_tools/tcp_input/: __init__.py  main.py
docs/: 01_concept.md  02_architecture.md  03_memory_system.md  04_self_mod.md  README.md  account-system.md  agency-layer.md  agent-kernel.md  agent-state.md  architecture.md  client-guide.md  commands.md  config.md  conversation-service.md  event-bus.md  how-it-works.md  io-layer.md  ipc-spec.md  kernel-layer.md  limbic-layer.md  limbic-system.md  memory-layer.md  memory-manager.md  migration-roadmap.md  proactive-engine.md
docs/adr/: 001-3-process-architecture.md  001-limbic-layer.md  002-agency-layer-architecture.md
docs/how-it-works/: 01-eventbus.md  02-memory-system.md  03-emotion-system.md  04-drive-state.md  05-decision-making.md  06-proactive-scoring.md  07-inhibition.md  08-execution-pipeline.md  09-reflexion.md  10-personality.md  11-model-routing.md
docs/v2/: architecture.md  kernel-layer.md  memory-layer.md
iris/: __init__.py  errors.py
iris/account/: __init__.py  dispatcher.py  events.py  handler.py  hooks.py  manager.py  models.py  provider.py  store.py
iris/admin/: __main__.py
iris/agency/: __init__.py  builder.py  bus.py  hooks.py  internal_bus.py  manager.py  modulation.py  task_level.py
iris/capabilities/: __init__.py  registry.py
iris/commands/: __init__.py  handler.py
iris/event/: __init__.py  event.py  event_bus.py  event_types.py  tracer.py
iris/heartbeat/: __init__.py  service.py
iris/io/: __init__.py  gateway.py  handler.py  hooks.py  manager.py  models.py
iris/kernel/: __init__.py  agent_kernel.py  agent_state.py  capture_formatter.py  config.py  context.py  controller.py  conversation.py  debug_capture.py  diagnostics.py  event_bus.py  factory.py  ipc.py  ipc_input.py  ipc_output.py  kernel_process.py  llm_pipeline.py  logging.py  manager.py  memory_manager.py  proactive.py  proactive_response_tracker.py  process.py  reflexion.py  reflexion_manager.py  supervisor.py  tool_executor.py
iris/limbic/: __init__.py  acc.py  amygdala.py  appraiser.py  big_five.py  emotional_memory.py  generator.py  hooks.py  manager.py  models.py  modulator.py  mood.py  orchestrator.py  relationship.py  score.py  state.py
iris/llm/: __init__.py  bridge.py  capability.py  capability_checker.py  context.py  context_window.py  google_provider.py  health.py  hooks.py  llm_bridge.py  model_factory.py  ollama_provider.py  openai_compatible_provider.py  openrouter_provider.py  param_builder.py  priority_lock.py  prompt.py  protocol.py  provider.py  repetition.py  token_utils.py  tokenizer.py  tokenizer_manager.py
iris/memory/: __init__.py  builder.py  dispatcher.py  goal_store.py  handler.py  hooks.py  long_term_memory.py  manager.py  models.py  persona_data.py  persona_profile.py  protocol.py  scoring.py  sensory_memory.py  short_term_manager.py  short_term_memory.py  stores.py  user_store.py  vector_store.py
iris/personality/: __init__.py  personality.py
iris/room/: __init__.py  dispatcher.py  events.py  handler.py  hooks.py  manager.py  models.py  provider.py  store.py
iris/tools/: __init__.py  decorator.py  models.py  registry.py
memory/: __init__.py  iris_profile.md  persona_data.py  persona_profile.py  personality_default.md  stores.py  vector_store.py
memory/config/: personality_default.md
memory/data/: iris_profile.md
proto/: generate.ps1
tests/: conftest.py  test_placeholder.py
tests/account/: test_handler.py  test_models.py  test_provider.py  test_store.py
tests/agency/: test_system_events.py
tests/architecture/: test_dependency_rules.py
tests/kernel/: test_agent_kernel.py  test_agent_state.py  test_authenticator.py  test_command_router.py  test_config.py  test_context.py  test_controller.py  test_conversation.py  test_event.py  test_event_bus.py  test_grpc_server.py  test_input_buffer.py  test_io_presence.py  test_ipc.py  test_ipc_integration.py  test_ipc_output.py  test_kernel_process.py  test_proactive.py  test_proactive_response_tracker.py  test_reflexion.py  test_response_readiness.py  test_session_manager.py  test_tool_executor.py
tests/limbic/: test_appraiser.py  test_generator.py  test_init.py  test_limbic.py  test_mood.py  test_orchestrator.py  test_proactive_feedback.py  test_relationship.py  test_state.py
tests/llm/: test_capability_checker.py  test_context_window.py  test_google_provider.py  test_priority_lock.py  test_repetition_detector.py
tests/memory/: test_memory_manager.py  test_persona_data.py  test_persona_profile.py  test_personality.py  test_sensory_manager.py  test_short_term.py  test_stores.py
tests/room/: test_dispatcher.py  test_handler.py  test_manager.py  test_models.py  test_provider.py  test_store.py
tests/tools/: test_tools.py
(+221 files in other folders)
