[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "iris-mind"
version = "0.3.0"
description = "Autonomous AI assistant that learns and evolves"
requires-python = ">=3.13"
dependencies = [
    "ollama>=0.6",
    "httpx>=0.28",
    "python-dotenv>=1.1",
    "pydantic>=2",
    "pyyaml>=6",
    "rich>=13",
    "prompt-toolkit>=3",
    "chromadb>=1.4",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.15",
    "mypy>=2.1",
    "pytest>=9",
    "hypothesis>=6",
    "pre-commit>=4",
    "types-PyYAML",
]

[tool.setuptools.packages.find]
include = ["iris*"]

[tool.ruff]
target-version = "py313"
line-length = 120

[tool.ruff.lint]
# 既存プロジェクト向けの現実的なルールセット
# E, F, W: 標準的なエラー・構文チェック
# I: importのソート
# B: バグの温床になりやすいコードの検知 (Bugbear)
# UP: Python3.13向けのモダンな構文への自動アップグレード
select = ["E", "F", "W", "I", "B", "UP"]

# ▼ エラー爆発の原因になるため「除外」したルール（将来的に余裕があれば追加）
# "N" (pep8-naming): 関数名や変数名の命名規則。既存のキャメルケース等に大量反応する
# "PTH" (flake8-use-pathlib): os.path を pathlib に書き換えろと大量に怒られる
# "ARG" (flake8-unused-arguments): インターフェースやコールバックの未使用引数で怒られる
# "S" (flake8-bandit): セキュリティチェック。「subprocessを使ってはいけない」等でうるさい
# "D" (pydocstyle): Docstringの改行位置やピリオドの有無など、細かすぎるフォーマット警察

ignore = [
    "E501", # 行の長さ制限はフォーマッターに任せるため無視
    "B008", # 関数のデフォルト引数での関数呼び出しを許容（FastAPIやTyperでよく使うため）
]

[tool.ruff.lint.isort]
force-single-line = false
force-sort-within-sections = true
known-first-party = ["iris", "tests"]

[tool.ruff.format]
quote-style = "double"
docstring-code-format = true

# ==========================================
# Mypy設定 (ここも既存プロジェクトには厳しすぎるため少し緩和しています)
# ==========================================
[tool.mypy]
python_version = "3.13"
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
strict_equality = true

# 既存コードで型エラーが爆発する原因になるため、一旦 false に設定
check_untyped_defs = false      # 型定義がない関数の内部までチェックしない
disallow_incomplete_defs = false # 引数や戻り値の一部だけ型がある状態を許容
disallow_untyped_defs = false    # 型定義がない関数を許容
no_implicit_optional = false

[[tool.mypy.overrides]]
module = [
  "iris.llm.llm_bridge",
  "iris.llm.ollama_provider",
  "iris.memory.vector_store",
]
ignore_errors = true

[[tool.mypy.overrides]]
module = "chromadb.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["ollama", "httpx", "prompt_toolkit", "rich"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-v --strict-markers --tb=short"
markers = [
  "unit: ユニットテスト",
  "integration: 統合テスト",
  "slow: 低速テスト",
]
