[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "iris-mind"
version = "0.4.0"
description = "AI companion and assistant kernel with autonomous action and task execution"
requires-python = ">=3.13"
dependencies = [
    "ollama>=0.6",
    "httpx>=0.28",
    "python-dotenv>=1.1",
    "pydantic>=2",
    "pyyaml>=6",
    "rich>=13",
    "chromadb>=1.4",
    "tokenizers>=0.21",
    "grpcio>=1.80.0",
    "grpcio-tools>=1.80.0",
    "langgraph>=1.2",
    "langchain>=1.3",
    "langchain-ollama>=1.1",
    "langchain-openai>=1.2",
    "langchain-chroma>=1.1",
    "rank-bm25>=0.2",
    "instructor>=1.0",
    "loguru>=0.7",
    "tenacity>=9.0",
    "cachetools>=5.5",
    "orjson>=3.10",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.15",
    "mypy>=2.1",
    "pytest>=9",
    "hypothesis>=6",
    "pre-commit>=4",
    "types-PyYAML",
    "pyright>=1.1",
]

[tool.setuptools.packages.find]
include = ["iris*"]

[tool.ruff]
target-version = "py313"
line-length = 120
exclude = ["*_pb2.py", "*_pb2_grpc.py"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "RUF", "C4", "SIM", "RET", "PERF", "PIE", "FA", "ISC", "PT", "T10"]
ignore = [
    "E501",
    "B008",
    "RUF001",
    "RUF002",
    "RUF003",
]

[tool.ruff.lint.isort]
force-single-line = false
force-sort-within-sections = true
known-first-party = ["iris", "tests"]

[tool.ruff.format]
quote-style = "double"
docstring-code-format = true

[tool.mypy]
python_version = "3.13"
warn_unused_configs = false
warn_redundant_casts = true
strict_equality = true
warn_return_any = true
warn_unreachable = true
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true

[[tool.mypy.overrides]]
module = ["chromadb.*", "rank_bm25"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["ollama", "httpx", "tokenizers", "langgraph.*", "instructor.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = [
  "iris.io.transport.grpc_service_pb2",
  "iris.io.transport.grpc_service_pb2_grpc",
]
ignore_errors = true

[[tool.mypy.overrides]]
module = ["grpc"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-v --strict-markers --tb=short"
markers = [
  "unit: ユニットテスト",
  "integration: 統合テスト",
  "slow: 低速テスト",
]

[tool.coverage.run]
source = ["iris"]
omit = [
  "iris/io/transport/*_pb2*.py",
  "tests/*",
]

[tool.coverage.report]
fail_under = 70
show_missing = true
exclude_lines = [
  "pragma: no cover",
  "if TYPE_CHECKING:",
  "if __name__ == .__main__.",
  "@overload",
]
